hphp/hack/test/typecheck/expression_trees/splice_err3.php.exp
File "splice_err3.php", line 13, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 256, characters 26-35:
  Expected `ExampleInt`
  File "expr_tree.hhi", line 41, characters 40-52:
  But got `ExampleString`
